# sadit

./: Dockerfile  README.md  docker-compose.jetson.yaml  docker-compose.yaml
sadit_controller/: setup.py
sadit_controller/sadit_controller/: line_follower_node.py  opencv_line_follower_node.py  yolov8_line_follower_node.py
sadit_description/: setup.py
sadit_description/launch/: gazebo.launch.py
sadit_description/urdf/: sadit.gazebo  sadit.ros2_control.xacro  sadit.xacro
sadit_description/world/: sadit.world
sadit_mapping/: CMakeLists.txt  package.xml
sadit_mapping/config/: mapping.rviz  nav2_params.yaml  slam_params.yaml
sadit_mapping/launch/: complete_mapping.launch.py  mapping_launch.py  navigation_launch.py  slam_launch.py
sadit_mapping/maps/: sadit.pgm  sadit.yaml
sadit_serial_control/: README.md  package.xml  setup.cfg  setup.py
sadit_serial_control/arduino/: sadit_arduino_serial.ino
sadit_serial_control/launch/: line_follower.launch.py  sadit_control.launch.py  sadit_serial_control.launch.py
sadit_serial_control/sadit_serial_control/: sadit_serial_controller.py
sadit_serial_control/test/: test_sadit_serial_control.py
sdt_perception/: README.md  README_LANE_FOLLOWER.md  package.xml  setup.cfg  setup.py
sdt_perception/config/: lane_follower_params.yaml
sdt_perception/launch/: lane_follower.launch.py
sdt_perception/sdt_perception/: lane_follower.py
