<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sadit_mapping</name>
  <version>0.0.0</version>
  <description>SADIT robot mapping and navigation package</description>
  <maintainer email="hikmetselcukgunes@gmail.com">gunes</maintainer>
  <license>Apache-2.0</license>

  <depend>rclcpp</depend>
  <depend>nav2_core</depend>
  <depend>nav2_util</depend>
  <depend>nav2_controller</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>nav2_lifecycle_manager</depend>
  <depend>nav2_map_server</depend>
  <depend>nav2_msgs</depend>
  <depend>nav2_planner</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>slam_toolbox</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
